[package]
name = "unison"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
eframe = "0.31.1"
env_logger = "0.11.8"
futures-util = "0.3.31"
get_if_addrs = "0.5.3"
lazy_static = "1.5.0"
log = "0.4.27"
reqwest = { version = "0.12.18",  features = ["json"] }
rodio = "0.20.1"
serde = { version = "1.0.219",  features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"]}
tokio-tungstenite = "0.26.2"

